# glista

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
m4/: glista.m4
po/: POTFILES.in  glista.pot  he.gmo  he.po  ru.po  sv.po
src/: Makefile.am  Makefile.in  glista-i18n.h  glista-plugin.c  glista-plugin.h  glista-reminder.c  glista-reminder.h  glista-storage.c  glista-storage.h  glista-textview-linkify.c  glista-textview-linkify.h  glista-ui-callbacks.c  glista-ui.c  glista-ui.h  glista-unique.c  glista-unique.h  glista.h  main.c  storage.c  ui-callbacks.c
src/modules/: Makefile.am  Makefile.in  glista-reminder-default.c  glista-reminder-dummy.c  glista-reminder-libnotify.c
ui/: Makefile.am  Makefile.in  glista-icons.xml  glista.desktop  glista.desktop.in  glista.glade  glista.ui
